Fixing: Fix an issue with the ModuleResourceServlet